Add bridge settings
